--- a/index.html
+++ b/index.html
@@ -2,14 +2,14 @@
 <html lang="en" class="no-js">
   <base target="_blank">
   <meta charset="UTF-8" />
-  <title>Stephen Otremba</title>
-  <meta name="description" content="Hi, my name is Griffin Ansel! I'm an MIT student studying computer science and Economics.">
+  <title>Griffin S. Ansel</title>
+  <meta name="description" content="Hi, my name is Griffin Ansel! I'm an MIT student studying Computer Science and Economics.">
   <link rel=“canonical” href="https://stephenotremba.com/" />
-  <meta property="og:title" content="Stephen Otremba" />
+  <meta property="og:title" content="Griffin S. Ansel" />
   <meta property="og:type" content="website" />
-  <meta property="og:url" content="https://stephenotremba.com/" />
-  <meta property="og:image" content="https://stephenotremba.com/assets/headshot.jpg" />
-  <meta property="og:description" content="Hi, my name is Griffin Ansel! I'm an MIT student studying computer science and Economics." />
+  <meta property="og:url" content="https://gansel51.github.io/" />
+  <meta property="og:image" content="https://https://gansel51.github.io/assets/headshot.jpg" />
+  <meta property="og:description" content="Hi, my name is Griffin Ansel! I'm an MIT student studying Computer Science and Economics." />
   <link rel="shortcut icon" type="image/png" href="assets/favicon.png">
   <link rel="apple-touch-icon" href="assets/favicon.png">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -30,7 +30,7 @@
         <hr style="width: 50%; background-color: #E83951; border-color: #E83951;">
     <a href="mailto:gansel@mit.edu" style="color: white;"><i class="fas fa-envelope" style="font-size: 2em;"></i></a>
     &nbsp
-    <a href="https://www.linkedin.com/in/sotremba" style="color: white;"><i class="fab fa-linkedin" style="font-size: 2em;"></i></a>
+    <a href="https://www.linkedin.com/in/griffinansel" style="color: white;"><i class="fab fa-linkedin" style="font-size: 2em;"></i></a>
     &nbsp
     <a href="https://github.com/gansel51" style="color: white;"><i class="fab fa-github" style="font-size: 2em;"></i></a>
     &nbsp
