Changing name from copied project.

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <title>Griffin S. Ansel</title>
   <meta name="description" content="Hi, my name is Griffin Ansel! I'm an MIT student studying Computer Science and Economics.">
-  <link rel=“canonical” href="https://stephenotremba.com/" />
+  <link rel=“canonical” href="https://gansel51.github.io/" />
   <meta property="og:title" content="Griffin S. Ansel" />
   <meta property="og:type" content="website" />
   <meta property="og:url" content="https://gansel51.github.io/" />
@@ -26,7 +26,7 @@
 
 <div id="particles">
   <div id="intro">
-      <h2 style="font-family: 'Syncopate', sans-serif; font-weight: 15;">Stephen Otremba</h2>
+      <h2 style="font-family: 'Syncopate', sans-serif; font-weight: 15;">Griffin S. Ansel</h2>
         <hr style="width: 50%; background-color: #E83951; border-color: #E83951;">
     <a href="mailto:gansel@mit.edu" style="color: white;"><i class="fas fa-envelope" style="font-size: 2em;"></i></a>
     &nbsp
