--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     &nbsp
     <a href="https://github.com/gansel51" style="color: white;"><i class="fab fa-github" style="font-size: 2em;"></i></a>
     &nbsp
-    <a href="GriffinResume.pdf" style="color: white;"><i class="fas fa-file" style="font-size: 2em;"></i></a>
+    <a href="GriffinAnselResume.pdf" style="color: white;"><i class="fas fa-file" style="font-size: 2em;"></i></a>
   </div>
 </div>
 
