--- a/index.html
+++ b/index.html
@@ -35,6 +35,8 @@
     <a href="https://github.com/gansel51" style="color: white;"><i class="fab fa-github" style="font-size: 2em;"></i></a>
     &nbsp
     <a href="GriffinAnselResume.pdf" style="color: white;"><i class="fas fa-file" style="font-size: 2em;"></i></a>
+    &nbsp
+    <a href="genie_logo.png" style="color: white;"><i class="fas fa-file" style="font-size: 2em;"></i></a>
   </div>
 </div>
 
